Revert "fix: ensure body content is visible during print (#4638)"
This reverts commit 0747a9430e565fc19bb96d557765e3ec28c423ad.

--- a/app/javascript/css/print.scss
+++ b/app/javascript/css/print.scss
@@ -1,6 +1,6 @@
 @media screen {
   #printSection {
-    display: block !important;
+    display: none !important;
   }
 }
 @media print {
